# CUSparse_Solver

./: .gitignore  CMakeLists.txt
CUSparse_Solver/: CMakeLists.txt  CUSparse_helper.cpp  CUSparse_helper.h  CUSparse_input.cpp  CUSparse_main.cpp  CUSparse_output.cpp  CUSparse_residual.cpp  CUSparse_solver.cpp
input/: A.txt  B.vec  X.vec
output/: X.vec  diff.txt
